clusters/boutique/platform/kyverno/policies/restrict-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-latest-tag
spec:
  validationFailureAction: Audit
  rules:
  - name: require-image-tag
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Using 'latest' tag for image is not allowed."
      pattern:
        spec:
          containers:
          - image: "!*:latest"
